feat: add authentication logic and format codebase
